main/default/objects/Customer_Contact__c/Customer_Contact__c.object-meta.xml
<CustomObject>
    <label>Customer Contact</label>
    <nameField>
        <displayFormat>Customer Contact {0000000000}</displayFormat>
        <label>Customer Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>