main/default/objects/Customer_Contact__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After Hours</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>Authorized Agent</fullName>
            </value>
            <value>
                <fullName>Authorized Contact</fullName>
            </value>
            <value>
                <fullName>Authorized User</fullName>
            </value>
            <value>
                <fullName>AutoDialer</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>BTS Contact</fullName>
            </value>
            <value>
                <fullName>CPNI Contact</fullName>
            </value>
            <value>
                <fullName>Customer Data</fullName>
            </value>
            <value>
                <fullName>Customer Voice</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>Local Contact</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Network Notification Email</fullName>
            </value>
            <value>
                <fullName>Network Notification Primary</fullName>
            </value>
            <value>
                <fullName>Network Notification SMS</fullName>
            </value>
            <value>
                <fullName>Open View Contact</fullName>
            </value>
            <value>
                <fullName>Payweb Email</fullName>
            </value>
            <value>
                <fullName>Responsible Party</fullName>
            </value>
            <value>
                <fullName>SMP Contact</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>Vendor Contact</fullName>
            </value>
            <value>
                <fullName>Vendor Data</fullName>
            </value>
            <value>
                <fullName>Vendor Voice</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>