main/default/objects/Customer_Contact__c/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <label>Customer Detail</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Customer Contacts</relationshipLabel>
    <relationshipName>Customer_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>