main/default/objects/Customer_Contact__c/fields/Logon_Name__c.field-meta.xml
<CustomField>
    <fullName>Logon_Name__c</fullName>
    <description>Used by external systems to map a user to a specific contact.</description>
    <label>Logon Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>