main/default/objects/Customer_Contact__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IntegraCare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>