main/default/objects/Customer_Contact__c/validationRules/ContactTypeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactTypeRequired</fullName>
    <active>true</active>
    <description>Contact type is required.</description>
    <errorConditionFormula>ISPICKVAL(Contact_Type__c, &#39;&#39;)</errorConditionFormula>
    <errorMessage>Contact type is required.</errorMessage>
</ValidationRule>