main/default/objects/Customer_Contact__c/validationRules/ResponsiblePartyEmailRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ResponsiblePartyEmailRequired</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Contact_Type__c, &#39;Responsible Party&#39;)</errorConditionFormula>
    <errorMessage>Responsible Party contacts require a valid E-mail address</errorMessage>
</ValidationRule>